--- a/html/index.html
+++ b/html/index.html
@@ -3,8 +3,24 @@
   <head>
     <meta charset="utf-8">
     <title>Calendar</title>
+    <link rel="stylesheet" href="../css/master.css">
   </head>
   <body>
-    
+    <div id='top-bar-container'>
+
+    </div>
+    <div id='left-bar-container'>
+
+      <div class='resize-bar'>
+
+      </div>
+    </div>
+    <div id='right-bar-container'>
+      <div class='resize-bar'>
+
+      </div>
+    </div>
+    <div id='calendar-container'>
+    </div>
   </body>
 </html>
