--- a/html/index.html
+++ b/html/index.html
@@ -11,14 +11,10 @@
     </div>
     <div id='left-bar-container'>
 
-      <div class='resize-bar'>
-
-      </div>
+      <div class='resize-bar'></div>
     </div>
     <div id='right-bar-container'>
-      <div class='resize-bar'>
-
-      </div>
+      <div class='resize-bar'></div>
     </div>
     <div id='calendar-container'>
     </div>
