--- a/html/index.html
+++ b/html/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Calendar</title>
+    <script src="../js/clock.js"></script>
+    <script src="../js/main.js"></script>
     <link rel="stylesheet" href="../css/master.css">
   </head>
   <body>
     <div id='top-bar-container'>
+      <div id='clock'>
 
+      </div>
     </div>
     <div id='left-bar-container'>
 
