--- a/html/index.html
+++ b/html/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Calendar</title>
+    <script src="../js/days.js"></script>
+    <script src="../js/scroll-date-module.js"></script>
+    <script src="../js/calendar.js"></script>
     <script src="../js/clock.js"></script>
     <script src="../js/main.js"></script>
     <link rel="stylesheet" href="../css/master.css">
