--- a/html/index.html
+++ b/html/index.html
@@ -12,9 +12,7 @@
   </head>
   <body>
     <div id='top-bar-container'>
-      <div id='clock'>
-
-      </div>
+      <span id='clock'></span>
     </div>
     <div id='left-bar-container'>
 
