--- a/html/index.html
+++ b/html/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Calendar</title>
-    <script src="../js/date-template.js"></script>
-    <script src="../js/scroll-date-module.js"></script>
+    <script src="../js/date.js"></script>
+    <script src="../js/scroll-date.js"></script>
     <script src="../js/calendar.js"></script>
     <script src="../js/clock.js"></script>
     <script src="../js/main.js"></script>
