--- a/html/index.html
+++ b/html/index.html
@@ -20,6 +20,18 @@
     </div>
     <div id='right-bar-container'>
       <div class='resize-bar'></div>
+      <div class='scroll-date'>
+        <div class='scroll-box' id='box1'>
+          <p>1</p>
+          <p>2</p>
+          <p>3</p>
+        </div>
+        <div class='scroll-box' id='box2'>
+          1<br>
+          2<br>
+          3<br>
+        </div>
+      </div>
     </div>
     <div id='calendar-container'>
     </div>
